# cfmt

./: .cfmt.conf  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: example_unformatted.c
src/: main.c
src/cli/: cli.c  cli.h
src/formatter/: formatter.c  formatter.h
src/tokenizer/: token.c  token.h  tokenizer.c  tokenizer.h
src/utils/: buffer.c  buffer.h  file_utils.c  file_utils.h  string_utils.c  string_utils.h
tests/: test_formatter.c  test_framework.h  test_tokenizer.c
